# emicart

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
emicart/: __init__.py  __main__.py
emicart/analysis/: __init__.py  fft.py  units.py
emicart/data/: default_limits.json  default_probes.json
emicart/instruments/: __init__.py  tektronix.py
emicart/limits/: __init__.py  registry.py
emicart/probes/: __init__.py  registry.py
emicart/ui/: __init__.py  capture_tool.py  curve_viewer.py  files.py  import_export.py
scripts/: install_pi.sh  install_windows.ps1  reset_user_data.py  smoke_roundtrip.py
tests/: test_fft_rbw_windowing.py  test_import_export_roundtrip.py  test_registries_and_units.py  test_tektronix.py
