[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emicart"
version = "0.1.0"
description = "Scope-based EMI spectrum capture and limit-curve comparison toolkit."
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
mat = ["scipy>=1.10"]
dev = ["scipy>=1.10", "build>=1.2"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["emicart*"]

[tool.setuptools.package-data]
emicart = ["data/*.json"]
